cluster/apps/uptime-kuma/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kuma
  labels:
    goldilocks.fairwinds.com/enabled: "true"
