cluster/apps/uptime-kuma/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: kuma
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:2.5.6
          ports:
            - name: uptime-kuma
              containerPort: 3001
              protocol: TCP
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              memory: "384Mi"
          livenessProbe:
            exec:
              command:
                - node
                - extra/healthcheck.js
            initialDelaySeconds: 180
            periodSeconds: 60
            timeoutSeconds: 30
          volumeMounts:
            - name: kuma-data
              mountPath: /app/data
      volumes:
        - name: kuma-data
          persistentVolumeClaim:
            claimName: uptime-kuma-pvc
